# workflow_nserver

./: README.md
data_node_server/: CMakeLists.txt
data_node_server/include/: http_server.h
data_node_server/src/: http_server.cc  main.cc
main_server/: CMakeLists.txt
main_server/include/: http_client.h  main_server.h
main_server/src/: http_client.cc  main.cc  main_server.cc
python_client/: main.py  read_bi.py
